--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./Develop/assets/css/reset.css">
     <link rel="stylesheet" href="./Develop/assets/css/style.css">
     <title>website</title>
 </head>
-
+<!-- Our header has a nav bar which allows clients to jump to that content -->
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -24,9 +25,16 @@
             </ul>
         </nav>
     </header>
-    <figure id="hero"></figure>
+
+    <!-- Photo showcasing our commitment to your company's needs -->
+    <figure id="hero">
+        <!-- <img url="./images/digital-marketing-meeting.jpg"
+        alt="Digital Marketing Meeting"> -->
+    </figure>
+
+<!-- This section summarizes what services we provide -->
     <section class="content">
-        <summary class="search-engine-optimization">
+        <summary id= "search-engine-optimization"  class="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" 
             alt="Search Engine Optimization"  
             class="float-left"/>
@@ -35,14 +43,14 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </summary>
-        <summary class="online-reputation-management">
+        <summary id= "online-reputation-management" class="online-reputation-management">
             <img src="./images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </summary>
-        <summary class="social-media-marketing">
+        <summary id= "social-media-marketing"  class="social-media-marketing">
             <img src="./images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -50,8 +58,9 @@
             </p>
         </summary>
     </section>
+   
+    <!-- This is the aside section which shows the benefits of our service -->
     <section class="benefits">
-       
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./images/lead-generation.png" />
