--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./Develop/assets/css/style.css">
     <title>website</title>
 </head>
-<!-- Our header has a nav bar which allows clients to jump to that content -->
+<!-- Our header has a nav bar which allows clients to jump to that content     -->
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -27,10 +27,7 @@
     </header>
 
     <!-- Photo showcasing our commitment to your company's needs -->
-    <figure id="hero">
-        <!-- <img url="./images/digital-marketing-meeting.jpg"
-        alt="Digital Marketing Meeting"> -->
-    </figure>
+    <figure id="hero"></figure>
 
 <!-- This section summarizes what services we provide -->
     <section class="content">
