--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </header>
 
     <!-- Photo showcasing our commitment to your company's needs -->
-    <figure id="hero"></figure>
+    <!-- not sure if this alt id is even needed but i saw this image didnt have one -->
+    <figure id="hero" alt="digital-marketing-meeting"> </figure>
 
     <!-- This section summarizes what services we provide -->
     <section class="content">
